<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_servicio">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_servicio"
        android:name="com.example.myapplication.ui.servicio.nuevoservicioFragment"
        android:label="@string/menu_solicitud"
        tools:layout="@layout/fragment_nuevoservicio" />

    <fragment
        android:id="@+id/nav_capital"
        android:name="com.example.myapplication.ui.capital.capitalFragment"
        android:label="@string/capitalS"
        tools:layout="@layout/fragment_capital" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapplication.ui.perfil.profileFragment"
        android:label="@string/perfilN"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_config"
        android:name="com.example.myapplication.ui.configuracion.configuracionFragment"
        android:label="@string/configuracionN"
        tools:layout="@layout/fragment_configuration" />

</navigation>