<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_registerForm">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Datos personales"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/indigo_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="Nombre(s):" />

    <EditText
        android:id="@+id/nombrePersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="Apellidos:" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="Telefono:" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="RFC:" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Domicilio"
            android:textColor="@color/indigo_700"
            android:textSize="24sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/calle" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:text="Numero:" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="Colonia:" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="CP:" />

    <EditText
        android:id="@+id/editTextTextPersonName11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario"
        android:textColor="@color/indigo_700"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView19"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/email" />
    <EditText
        android:id="@+id/Et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/repita_contrase_a" />

    <EditText
        android:id="@+id/Et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ter_con"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="381dp"
        android:layout_height="27dp"
        android:text="@string/a_t_c"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonsig_reg_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/siguiente" />


    </LinearLayout>

    </ScrollView>

</RelativeLayout>